# neuro-causal-pfn

./: .gitignore  README.md  pyproject.toml  smoke_intersynth.py  smoke_real.py  verify_names_atlas.py
configs/: config.yaml
configs/data/: lesion.yaml
configs/mode/: full.yaml  prototype.yaml
configs/pfn/: model.yaml
configs/prior/: intersynth.yaml
configs/vae/: lesion_vae.yaml
env/: environment.cluster.yml  environment.prototype.yml
scripts/: run_full_cluster.sbatch  run_prototype.sh
src/neurocausalpfn/causal/: pns.py
src/neurocausalpfn/contrastive/: losses.py  model.py
src/neurocausalpfn/data/: clinical.py  nifti_dataset.py  transforms.py
src/neurocausalpfn/dscm/: model.py
src/neurocausalpfn/eval/: equity.py  latent_quality.py  metrics.py  probes.py
src/neurocausalpfn/mae/: losses.py  model.py
src/neurocausalpfn/pfn/: attention.py  cepo_ppd.py  inference.py  model.py  tabicl_model.py  tokens.py
src/neurocausalpfn/prior/: atlas.py  cohort.py  confounding.py  intersynth.py  intersynth_atlas.py  verify_identifiability.py
src/neurocausalpfn/train/: curriculum.py  run_stage2_real.py  sweep_dims.py  train_contrastive.py  train_dmvae.py  train_dscm.py  train_mae.py  (+2 more)
tests/: test_ard_vae.py  test_arm_b.py  test_attention_mask.py  test_backbones.py  test_contrastive.py  test_daft_clinical.py  test_disconnectome_fusion.py  test_dscm.py  test_e12.py  test_e3_e9b.py  test_early_fusion.py  test_eval_bank.py  test_filename.py  test_identifiability.py  test_intersynth.py  test_losses.py  test_mae.py  test_runtime.py  test_smoke.py  test_tabicl.py
(+10 files in other folders)
