[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neurocausalpfn"
version = "0.1.0"
description = "Neuroimaging-based causal foundation model for individualized stroke treatment using in-context learning"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.13",
    "scikit-learn>=1.4",
    "torch==2.3.1",
    "einops>=0.8.0",
]

[project.optional-dependencies]
# 3D medical imaging and NIfTI input/output (required for real data)
imaging = [
    "monai>=1.3",
    "torchio>=0.19",
    "nibabel>=5.2",
    "nilearn>=0.10",
    "pandas>=2.2",
]
# causal and tabular in-context references, used as a baseline
baselines = [
    "causalpfn==0.1.4",
    "tabicl==0.1.4",
    "faiss-cpu==1.8.0",
    "huggingface_hub>=0.23",
]
# cluster orchestration
cluster = [
    "hydra-core==1.3.2",
    "omegaconf>=2.3",
    "pytorch-lightning>=2.2",
    "wandb>=0.17",
]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
